<resources>
    <string name="maag"> 1. konsumsi gorengan yang terlalu banyak\n 2. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n 3. Cokelat\n 4. Produk hasil fermentasi (tape dan oncom)\n
                                        5. Buah-buahan yang banyak mengandung gas\n 6. Minuman bersoda\n 7. Kurangi meminum kopi dan teh
    </string>
    <string name="hipertensi">1. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
                                        2. Saus Tomat\n
                                        3. Makanan dan Minuman yang mengandung Kafein\n
                                        4. Makanan Berlemak\n
                                        5. Kurangi makanan dan minuman yang mengandung gula\n
    </string>
    <string name="asam_lambung">1. Minuman bersoda\n
                                2. Buah dan Sayuran : kedondong, pisang ambon, nangka, sawi dan kol.\n
                                3. Makanan berlemak\n
                                4. Makanan pedas
    </string>
    <string name="kolestrol">1. Daging kambing, kuda dan sapi \n
                            2. jeroan (Limpa, Hati, paru, ginjal dan usus)\n
                            3. ekstrak daging (abon)\n" +
                            4. seafod (ikan sotong, ikan sarden, udang, cumi-cumi, kepiting, ikan teri dan tiram)\n
                            5. Kacang-kacangan (kedelai, kacang hijau, melinjo, dan kacang tanah)\n
                            6. makanan berlemak\n
                            7. keju\n
                            8. es krim
    </string>
    <string name="diabetes">1. Makanan yang digoreng\n
                                        2. Makanan dan minuman berkafein\n
                                        3. minuman beralkohol\n
                                        4. Buah bercita rasa manis\n
                                        5. Nasi dan umbi-umbian\n
                                        6. Roti\n
                                        7. Pasta Putih
    </string>
    <string name="maagdiabetes">1. Makanan dengan cara digoreng \n
                                2. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
                                3. Cokelat \n
                                4. Produk hasil fermentasi (tape dan oncom)\n
                                5. Buah-buahan yang banyak mengandung gas\n
                                6. Minuman bersoda\n
                                7. Kurangi meminum kopi dan teh \n
                                8. Makanan dan minuman berkafein\n
                                9. minuman beralkohol\n
                                10. Buah bercita rasa manis\n
                                11. Nasi dan umbi-umbian\n
                                12. Roti\n
                                13. Pasta Putih
    </string>
    <string name="maagkolestrol">
        1. Daging kambing, kuda dan sapi\n
        2. jeroan (Limpa, Hati, paru, ginjal dan usus)\n
        3. ekstrak daging (abon)\n
        4. seafod (ikan sotong, ikan sarden, udang, cumi-cumi, kepiting, ikan teri dan tiram)\n
        5. Kacang-kacangan (kedelai, kacang hijau, melinjo, dan kacang tanah)\n
        6. makanan berlemak\n
        7. keju\n
        8. es krim \n
        9. konsumsi gorengan yang terlalu banyak\n
        10. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
        11. Cokelat\n
        12. Produk hasil fermentasi (tape dan oncom)\n
        13. Buah-buahan yang banyak mengandung gas\n
        14. Minuman bersoda\n
        15. Kurangi meminum kopi dan teh
    </string>
    <string name="maaghipertensi">
        1. konsumsi gorengan yang terlalu banyak\n
        2. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
        3. Cokelat\n
        4. Produk hasil fermentasi (tape dan oncom)\n
        5. Buah-buahan yang banyak mengandung gas\n
        6. Minuman bersoda\n
        7. Kurangi meminum kopi dan teh\n
        8. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
        9. Saus Tomat\n
        10. Makanan dan Minuman yang mengandung Kafein\n
        11. Makanan Berlemak\n
        12. Kurangi makanan dan minuman yang mengandung gula
    </string>
    <string name="maagasamlambung">
        1. konsumsi gorengan yang terlalu banyak\n
        2. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
        3. Cokelat\n
        4. Produk hasil fermentasi (tape dan oncom)\n
        5. Buah-buahan yang banyak mengandung gas\n
        6. Minuman bersoda\n
        7. Kurangi meminum kopi dan teh\n
        8. Buah dan Sayuran : kedondong, pisang ambon, nangka, sawi dan kol.\n
        9. Makanan berlemak\n
        10. Makanan pedas
    </string>
    <string name="diabeteskolestrol">
        1. Makanan dengan cara digoreng\n
        2. Makanan dan minuman berkafein\n
        3. minuman beralkohol\n
        4. Buah bercita rasa manis\n
        5. Nasi dan umbi-umbian\n
        6. Roti\n
        7. Pasta Putih \n
        8. Daging kambing, kuda dan sapi\n
        9. jeroan (Limpa, Hati, paru, ginjal dan usus)\n
        10. ekstrak daging (abon)\n
        11. seafod (ikan sotong, ikan sarden, udang, cumi-cumi, kepiting, ikan teri dan tiram)\n
        12. Kacang-kacangan (kedelai, kacang hijau, melinjo, dan kacang tanah)\n
        13. makanan berlemak\n
        14. keju\n
        15. es krim\n
    </string>
    <string name="diabetesasamlambung">
        1. Makanan dengan cara digoreng\n
        2. Makanan dan minuman berkafein\n
        3. minuman beralkohol\n
        4. Buah bercita rasa manis\n
        5. Nasi dan umbi-umbian\n
        6. Roti\n
        7. Pasta Putih\n
        8. Minuman bersoda\n
        9. Buah dan Sayuran : kedondong, pisang ambon, nangka, sawi dan kol.\n
        10. Makanan berlemak\n
        11. Makanan pedas
    </string>
    <string name="diabeteshipertensi">
        1. Makanan dengan cara digoreng\n
        2. Makanan dan minuman berkafein\n
        3. minuman beralkohol\n
        4. Buah bercita rasa manis\n
        5. Nasi dan umbi-umbian\n
        6. Roti\n
        7. Pasta Putih\n
        8. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
        9. Saus Tomat\n
        10. Makanan dan Minuman yang mengandung Kafein\n
        11. Makanan Berlemak\n
        12. Kurangi makanan dan minuman yang mengandung gula\n
    </string>
    <string name="kolestrolhipertensi">
        1. Daging kambing, kuda dan sapi\n
        2. jeroan (Limpa, Hati, paru, ginjal dan usus)\n
        3. ekstrak daging (abon)\n
        4. seafod (ikan sotong, ikan sarden, udang, cumi-cumi, kepiting, ikan teri dan tiram)\n
        5. Kacang-kacangan (kedelai, kacang hijau, melinjo, dan kacang tanah)\n
        6. makanan berlemak\n
        7. keju\n
        8. es krim\n
        9. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
        10. Saus Tomat\n
        11. Makanan dan Minuman yang mengandung Kafein\n
        12. Makanan Berlemak\n
        13. Kurangi makanan dan minuman yang mengandung gula
    </string>
    <string name="kolestrolasamlambung">
        1. Daging kambing, kuda dan sapi\n
        2. jeroan (Limpa, Hati, paru, ginjal dan usus)\n
        3. ekstrak daging (abon)\n
        4. seafod (ikan sotong, ikan sarden, udang, cumi-cumi, kepiting, ikan teri dan tiram)\n
        5. Kacang-kacangan (kedelai, kacang hijau, melinjo, dan kacang tanah)\n
        6. makanan berlemak\n
        7. keju\n
        8. es krim\n
        9. Minuman bersoda\n
        10. Buah dan Sayuran : kedondong, pisang ambon, nangka, sawi dan kol.\n
        11. Makanan berlemak\n
        12. Makanan pedas\n
    </string>
    <string name="hipertensiasamlambung">
        1. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
        2. Saus Tomat\n
        3. Makanan dan Minuman yang mengandung Kafein\n
        4. Makanan Berlemak\n
        5. Kurangi makanan dan minuman yang mengandung gula\n
        6. Minuman bersoda\n
        7. Buah dan Sayuran : kedondong, pisang ambon, nangka, sawi dan kol.\n
        8. Makanan pedas
    </string>
    <string name="maagdiabeteskolestrol">
        1. konsumsi gorengan yang terlalu banyak\n
        2. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
        3. Cokelat\n
        4. Produk hasil fermentasi (tape dan oncom)\n
        5. Buah-buahan yang banyak mengandung gas\n
        6. Minuman bersoda\n
        7. Kurangi meminum kopi dan teh\n
        8. Makanan dengan cara digoreng\n
        9. Makanan dan minuman berkafein\n
        10. minuman beralkohol\n
        11. Buah bercita rasa manis\n
        12. Nasi dan umbi-umbian\n
        13. Roti\n
        14. Pasta Putih\n
        15. Daging kambing, kuda dan sapi\n
        16. jeroan (Limpa, Hati, paru, ginjal dan usus)\n
        17. ekstrak daging (abon)\n
        18. seafod (ikan sotong, ikan sarden, udang, cumi-cumi, kepiting, ikan teri dan tiram)\n
        19. Kacang-kacangan (kedelai, kacang hijau, melinjo, dan kacang tanah)\n
        20. makanan berlemak\n
        21. keju\n
        22. es krim
    </string>
    <string name="hipertensimaagdiabetes">
        1. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
        2. Saus Tomat\n
        3. Makanan dan Minuman yang mengandung Kafein\n
        4. Makanan Berlemak\n
        5. Kurangi makanan dan minuman yang mengandung gula\n
        6. konsumsi gorengan yang terlalu banyak\n
        7. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
        8. Cokelat\n
        9. Produk hasil fermentasi (tape dan oncom)\n
        10. Buah-buahan yang banyak mengandung gas\n
        11. Minuman bersoda\n
        12. Kurangi meminum kopi dan teh\n
        13. Makanan dengan cara digoreng\n
        14. Makanan dan minuman berkafein\n
        15. minuman beralkohol\n
        16. Buah bercita rasa manis\n
        17. Nasi dan umbi-umbian\n
        18. Roti\n
        19. Pasta Putih\n
    </string>
    <string name="hipertensimaagasamlambung">
        1. Makanan Olahan (kalengan, sosis, ham dan dendeng)\n
        2. Saus Tomat\n
        3. Makanan dan Minuman yang mengandung Kafein\n
        4. Makanan Berlemak\n
        5. Kurangi makanan dan minuman yang mengandung gula\n
        6. konsumsi gorengan yang terlalu banyak\n
        7. susu olahan yang tinggi lemak (Mentega dengan kadar lemak tinggi)\n
        8. Cokelat\n
        9. Produk hasil fermentasi (tape dan oncom)\n
        10. Buah-buahan yang banyak mengandung gas\n
        11. Minuman bersoda\n
        12. Kurangi meminum kopi dan teh\n
        13. Minuman bersoda\n
        14. Buah dan Sayuran : kedondong, pisang ambon, nangka, sawi dan kol.\n
        15. Makanan pedas
    </string>
    <string name="hari1">Hari ke-1</string>
    <string name="hari2">Hari ke-2</string>
    <string name="hari3">Hari ke-3</string>
    <string name="hari4">Hari ke-4</string>
    <string name="hari5">Hari ke-5</string>
    <string name="hari6">Hari ke-6</string>
    <string name="hari7">Hari ke-7</string>
    <string name="jk_lk">Laki-Laki</string>
    <string name="jk_pr">Perempuan</string>
    <string name="golA">A</string>
    <string name="golB">B</string>
    <string name="golAB">AB</string>
    <string name="golO">O</string>
    <string name="ikutimetode">Ikuti Metode</string>
</resources>